<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_action_sort"
        android:title="@string/menu_categories"
        android:visible="false"
        app:showAsAction="always">

        <menu>
            <group
                android:id="@+id/menu_sort_group"
                android:checkableBehavior="single">
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_scroll_to_top"
        android:icon="@drawable/ic_action_up"
        android:title="@string/menu_scroll_to_top"/>

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_up"
        android:title="@string/menu_refresh"/>

    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_action_help"
        android:title="@string/menu_about" />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings" />

</menu>